# cookiecutter-template

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  Makefile  README.md  pyproject.toml  test_environment.py  tox.ini
{{ cookiecutter.repo_name }}/src/data/: make_dataset.py
