[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"

license = "{% if cookiecutter.open_source_license == 'MIT' %}MIT{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3{% endif %}"

authors = [
    "{{ cookiecutter.author_name }}"
]

readme = "README.md"
homepage = ""


[tool.poetry.dependencies]
python = ">=3.8, <3.10"
python-dotenv = "^0.5.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.10.0"}
isort = "^5.10.0"
pylint = "^2.15.0"
flake8 = "^5.0.0"
mypy = "^0.982"
bandit = "^1.7.0"
nbqa = "^1.5.0"

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^3.5.0"
jupyterlab_widgets = "^1.1.1"
ipywidgets = "^7.7.7"
jupyter-contrib-nbextensions = ">=0.5.0"

[tool.black]
line-length = 110

[tool.pylint.MASTER]
max-line-length=110
disable = [
   "logging-fstring-interpolation"
]

[tool.mypy]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 110

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
