[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"

license = "{% if cookiecutter.open_source_license == 'MIT' %}MIT{% elif cookiecutter.open_source_license == 'BSD-3-Clause' %}BSD-3{% endif %}"

authors = [
    "{{ cookiecutter.author_name }}"
]

readme = "README.md"
homepage = ""

packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
